--- a/caerulean/whirlpool/Makefile
+++ b/caerulean/whirlpool/Makefile
@@ -7,7 +7,7 @@ dependencies:
 .PHONY: dependencies
 
 build: dependencies
-	protoc -I=../../vessels/ --go_out=. --experimental_allow_proto3_optional ../../vessels/*.proto
+	protoc -I=../../ --go_out=. --experimental_allow_proto3_optional ../../vessels/*.proto
 	go mod tidy
 	go build -o build/$(EXECUTABLE_NAME) ./sources
 .PHONY: build
