--- a/.github/workflows/lint.yml
+++ b/.github/workflows/lint.yml
@@ -23,7 +23,7 @@ jobs:
 
       - name: Install Dependencies 🔮
         run: |
-          apt install protobuf-compiler protoc-gen-go
+          sudo apt-get install -y protobuf-compiler protoc-gen-go
           go install golang.org/x/lint/golint@latest
           go install google.golang.org/protobuf/cmd/protoc-gen-go@latest
 
