--- a/caerulean/whirlpool/Makefile
+++ b/caerulean/whirlpool/Makefile
@@ -2,7 +2,7 @@ EXECUTABLE_NAME = whirlpool.run
 
 dependencies:
 	# TODO: move to prerequisites!
-	apt install protobuf-compiler protoc-gen-go
+	apt install protobuf-compiler
 	go install google.golang.org/protobuf/cmd/protoc-gen-go@latest
 	go mod tidy
 .PHONY: dependencies
