--- a/.github/workflows/lint.yml
+++ b/.github/workflows/lint.yml
@@ -23,12 +23,12 @@ jobs:
 
       - name: Install Dependencies 🔮
         run: |
-          sudo apt-get install -y protobuf-compiler protoc-gen-go
+          sudo apt-get install -y protobuf-compiler
           go install golang.org/x/lint/golint@latest
           go install google.golang.org/protobuf/cmd/protoc-gen-go@latest
 
       - name: Generate Code 🗜
-        run: protoc -I=../../ --go_out=. --experimental_allow_proto3_optional ../../vessels/*.proto
+        run: protoc -I=. --go_out=caerulean/whirlpool --experimental_allow_proto3_optional vessels/*.proto
 
       - name: Lint Caerulean Whirlpool 🧪
         run: make lint-whirlpool
