local test done

--- a/viridian/algae/docker/Dockerfile.echo
+++ b/viridian/algae/docker/Dockerfile.echo
@@ -1,3 +1,8 @@
 FROM python:3.11-alpine3.17 as default
 
-ENTRYPOINT python3
+ENV PYTHONUNBUFFERED 1
+ENV PYTHONDONTWRITEBYTECODE 1
+WORKDIR /seaside/echo
+
+COPY docker/echo_server.py ./
+ENTRYPOINT python3 echo_server.py
