--- a/viridian/algae/docker/compose.remote.yml
+++ b/viridian/algae/docker/compose.remote.yml
@@ -22,17 +22,9 @@ services:
       default:
         ipv4_address: 10.0.0.87
 
-  echo:
-    extends:
-      file: compose.base.yml
-      service: echo
-    networks:
-      default:
-        ipv4_address: 10.0.0.69
-
 networks:
   default:
-    driver: bridge
+    driver: host
     name: sea-int
     ipam:
       config:
