network setup done

--- a/caerulean/whirlpool/Dockerfile
+++ b/caerulean/whirlpool/Dockerfile
@@ -27,6 +27,7 @@ COPY --from=builder /seaside/caerulean/whirlpool.run ./
 ENV LOG_LEVEL WARNING
 ENV MAX_USERS 16
 
+ENV OWNER_KEY none
 ENV ADDRESS none
 ENV EXTERNAL none
 ENV SURFACE none
@@ -37,4 +38,5 @@ ENV USER_TTL 300
 
 EXPOSE $SEA_PORT/udp
 EXPOSE $CTRL_PORT/tcp
-ENTRYPOINT ./whirlpool.run -a $ADDRESS -e $EXTERNAL -s $SURFACE -p $SEA_PORT -c $CTRL_PORT -t $USER_TTL -u $MAX_USERS
+EXPOSE $NET_PORT/tcp
+ENTRYPOINT ./whirlpool.run -a $ADDRESS -e $EXTERNAL -s $SURFACE -p $SEA_PORT -c $CTRL_PORT -n $NET_PORT -t $USER_TTL -u $MAX_USERS -o $OWNER_KEY
