--- a/viridian/algae/docker/Dockerfile.algae
+++ b/viridian/algae/docker/Dockerfile.algae
@@ -17,13 +17,15 @@ RUN poetry install --extras test
 
 ENV LOG_LEVEL DEBUG
 
+ENV OWNER_KEY none
 ENV TUNNEL seatun
 ENV CONN_MTU 1500
 ENV CONN_BUFF 2000
-ENV ADDRESS 127.0.0.1
+ENV NODE_ADDR 127.0.0.1
+ENV NET_PORT 8587
 ENV SEA_PORT 8542
 ENV CTRL_PORT 8543
 
 EXPOSE $SEA_PORT/udp
 EXPOSE $CTRL_PORT/tcp
-ENTRYPOINT poetry run execute -t $TUNNEL -m $CONN_MTU -b $CONN_BUFF -a $ADDRESS -p $SEA_PORT -c $CTRL_PORT
+ENTRYPOINT poetry run execute $OWNER_KEY -t $TUNNEL -m $CONN_MTU -b $CONN_BUFF -a $NODE_ADDR -n $NET_PORT -p $SEA_PORT -c $CTRL_PORT
