--- a/viridian/algae/pyproject.toml
+++ b/viridian/algae/pyproject.toml
@@ -22,6 +22,7 @@ packages = [
 python = ">=3.8,<3.12"
 colorama = "^0.4.6"
 pyroute2 = "^0.7.9"
+protobuf = "^4.24.4"
 pycryptodome = "^3.18.0"
 mypy = { version = "^1.3.0", optional = true }
 flake8 = { version = "^3.9.2", optional = true }
@@ -41,6 +42,7 @@ test = ["pytest", "python-on-whales", "icmplib"]
 
 [tool.poetry.scripts]
 execute = { callable = "sources.main:main" }
+generate = { callable = "scripts.process:generate", extras = ["build"] }
 lint = { callable = "scripts.codestyle:lint", extras = ["devel"] }
 format = { callable = "scripts.codestyle:format", extras = ["devel"] }
 test = { callable = "scripts.test:test", extras = ["test"] }
