client small fixes

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -39,7 +39,7 @@ jobs:
       - name: Build Algae Executable 🏗️
         env:
           EXEC_NAME: ${{ format('algae-executable-{0}', env.ID) }}
-        run: poetry -C viridian/algae run build ${{ env.EXEC_NAME }}.run
+        run: poetry -C viridian/algae run generate ${{ env.EXEC_NAME }}.run
 
       - name: Save Artifact 🏺
         uses: actions/upload-artifact@v3
