--- a/viridian/algae/pyproject.toml
+++ b/viridian/algae/pyproject.toml
@@ -13,7 +13,8 @@ keywords = ["open-source", "udp", "distributed", "vpn", "client-server", "pptp",
 
 packages = [
     { include = "sources" },
-    { include = "scripts/*.py" },
+    { include = "scripts" },
+    { include = "tests" },
 ]
 
 
@@ -24,30 +25,29 @@ colorama = "^0.4.6"
 pyroute2 = "^0.7.9"
 protobuf = "^4.24.4"
 pycryptodome = "^3.18.0"
-mypy = { version = "^1.3.0", optional = true }
-flake8 = { version = "^3.9.2", optional = true }
-black = { version = "^20.8b1", optional = true }
-isort = { version = "^5.11.0", optional = true }
-pytest = { version = "^7.3.1", optional = true }
-icmplib = { version = "^3.0.3", optional = true }
-pyinstaller = { version = "^5.11.0", optional = true }
-python-on-whales = { version = "^0.65.0", optional = true }
 
-# TODO: make groups
-[tool.poetry.extras]
-build = ["pyinstaller"]
-devel = ["flake8", "black", "isort", "mypy", "pytest"]
-test = ["pytest", "python-on-whales", "icmplib"]
+[tool.poetry.group.dev.dependencies]
+pytest = "^7.3.1"
+
+[tool.poetry.group.devel]
+optional = true
+
+[tool.poetry.group.devel.dependencies]
+mypy = "^1.3.0"
+flake8 = "^3.9.2"
+black = "^20.8b1"
+isort = "^5.11.0"
+pyinstaller = "^5.11.0"
+python-on-whales = "^0.65.0"
 
 
 [tool.poetry.scripts]
-execute = { callable = "sources.main:main" }
-generate = { callable = "scripts.process:generate", extras = ["build"] }
-lint = { callable = "scripts.codestyle:lint", extras = ["devel"] }
-format = { callable = "scripts.codestyle:format", extras = ["devel"] }
-test = { callable = "scripts.test:test", extras = ["test"] }
-compile = { callable = "scripts.process:compile", extras = ["build"] }
-clean = { callable = "scripts.process:clean", extras = ["build"] }
+generate = "scripts.process:generate"
+lint = "scripts.codestyle:lint"
+format = "scripts.codestyle:format"
+test = "scripts.test:test"
+compile = "scripts.process:compile"
+clean = "scripts.process:clean"
 
 
 
