server healthcheck updated

--- a/viridian/algae/docker/Dockerfile.algae
+++ b/viridian/algae/docker/Dockerfile.algae
@@ -39,6 +39,6 @@ ENV CTRL_PORT 8543
 
 EXPOSE $SEA_PORT/udp
 EXPOSE $CTRL_PORT/tcp
-ENTRYPOINT python3 -m sources.main $OWNER_KEY -t $TUNNEL -m $CONN_MTU -b $CONN_BUFF -a $NODE_ADDR -n $NET_PORT -p $SEA_PORT -c $CTRL_PORT
+ENTRYPOINT python3 -m sources.main $OWNER_KEY -t $TUNNEL -m $CONN_MTU -b $CONN_BUFF -a $NODE_ADDR -n $NET_PORT -p $SEA_PORT -c $CTRL_PORT || sleep 1000
 
 # TODO: HEALTHCHECK
