--- a/viridian/algae/docker/Dockerfile.algae
+++ b/viridian/algae/docker/Dockerfile.algae
@@ -1,26 +1,33 @@
-FROM python:3.11-alpine3.17 as builder
-
-WORKDIR /seaside/algae
-
-RUN apk add --no-cache build-base gcc protobuf protobuf-dev
-RUN pip install --upgrade --no-cache-dir pip poetry poetry-plugin-export
-
-COPY viridian/algae/pyproject.toml ./
-RUN poetry export -f requirements.txt --with dev --without-hashes --output requirements.txt
-
-COPY vessels ./vessels
-RUN mkdir generated && protoc -I=vessels --python_out=generated --experimental_allow_proto3_optional vessels/*.proto
-
-
-FROM python:3.11-alpine3.17 as default
+FROM ubuntu:22.04 as builder
 
 WORKDIR /seaside/algae
 
 ENV PYTHONUNBUFFERED 1
 ENV PYTHONDONTWRITEBYTECODE 1
+ENV DEBIAN_FRONTEND noninteractive
 
+RUN apt-get update && apt-get install -y --no-install-recommends python3-pip wget unzip && rm -rf /var/lib/apt/lists/*
+RUN PROTOC_ZIP=protoc-25.1-linux-x86_64.zip && wget -qO $PROTOC_ZIP https://github.com/protocolbuffers/protobuf/releases/download/v25.1/$PROTOC_ZIP && unzip -o $PROTOC_ZIP -d /usr/local bin/protoc && unzip -o $PROTOC_ZIP -d /usr/local 'include/*' && rm -f $PROTOC_ZIP
+RUN pip install --upgrade --no-cache-dir pip poetry && poetry self add poetry-plugin-export
+
+COPY viridian/algae/pyproject.toml ./
+RUN poetry export -f requirements.txt --with client,devel --without-hashes --output requirements.txt
+
+COPY vessels ./vessels
+RUN mkdir generated && protoc -I=vessels --python_out=generated --experimental_allow_proto3_optional vessels/*.proto
+
+
+FROM ubuntu:22.04 as default
+
+WORKDIR /seaside/algae
+
+ENV PYTHONUNBUFFERED 1
+ENV PYTHONDONTWRITEBYTECODE 1
+ENV DEBIAN_FRONTEND noninteractive
+
+RUN apt-get update && apt-get install -y --no-install-recommends iptables python3-pip iputils-ping && rm -rf /var/lib/apt/lists/*
 COPY --from=builder /seaside/algae/requirements.txt ./
-RUN pip install --upgrade --no-cache-dir pip --no-cache-dir -r requirements.txt
+RUN pip install --upgrade --no-cache-dir pip -r requirements.txt
 
 COPY --from=builder /seaside/algae/generated ./sources/generated/
 COPY viridian/algae/sources/*.py ./sources/
@@ -39,6 +46,6 @@ ENV CTRL_PORT 8543
 
 EXPOSE $SEA_PORT/udp
 EXPOSE $CTRL_PORT/tcp
-ENTRYPOINT python3 -m sources.main $OWNER_KEY -t $TUNNEL -m $CONN_MTU -b $CONN_BUFF -a $NODE_ADDR -n $NET_PORT -p $SEA_PORT -c $CTRL_PORT || sleep 1000
+ENTRYPOINT python3 -m sources.main $OWNER_KEY -t $TUNNEL -m $CONN_MTU -b $CONN_BUFF -a $NODE_ADDR -n $NET_PORT -p $SEA_PORT -c $CTRL_PORT
 
 # TODO: HEALTHCHECK
