--- a/viridian/algae/pyproject.toml
+++ b/viridian/algae/pyproject.toml
@@ -22,17 +22,16 @@ packages = [
 [tool.poetry.dependencies]
 python = ">=3.8,<3.12"
 colorama = "^0.4.6"
+
+[tool.poetry.group.client.dependencies]
 pyroute2 = "^0.7.9"
 protobuf = "^4.24.4"
 pycryptodome = "^3.18.0"
 
-[tool.poetry.group.dev.dependencies]
+[tool.poetry.group.devel.dependencies]
 pytest = "^7.3.1"
 
-[tool.poetry.group.devel]
-optional = true
-
-[tool.poetry.group.devel.dependencies]
+[tool.poetry.group.script.dependencies]
 mypy = "^1.3.0"
 flake8 = "^3.9.2"
 black = "^20.8b1"
