--- a/viridian/algae/docker/Dockerfile.algae
+++ b/viridian/algae/docker/Dockerfile.algae
@@ -26,7 +26,7 @@ ENV PYTHONUNBUFFERED 1
 ENV PYTHONDONTWRITEBYTECODE 1
 ENV DEBIAN_FRONTEND noninteractive
 
-RUN apt-get update && apt-get install -y --no-install-recommends iptables python3-pip iputils-ping && rm -rf /var/lib/apt/lists/*
+RUN apt-get update && apt-get install -y --no-install-recommends build-essential iptables python3-pip iputils-ping && rm -rf /var/lib/apt/lists/*
 COPY --from=builder /seaside/algae/requirements.txt ./
 RUN pip install --upgrade --no-cache-dir pip -r requirements.txt
 
