--- a/viridian/algae/pyproject.toml
+++ b/viridian/algae/pyproject.toml
@@ -25,6 +25,7 @@ colorama = "^0.4.6"
 
 [tool.poetry.group.client.dependencies]
 pyroute2 = "^0.7.9"
+python-iptables = "^1.0.1"
 protobuf = "^4.24.4"
 pycryptodome = "^3.18.0"
 
