--- a/viridian/algae/pyproject.toml
+++ b/viridian/algae/pyproject.toml
@@ -31,6 +31,7 @@ pycryptodome = "^3.18.0"
 
 [tool.poetry.group.devel.dependencies]
 pytest = "^7.3.1"
+pythonping = "^1.1.4"
 
 [tool.poetry.group.script.dependencies]
 mypy = "^1.3.0"
