--- a/viridian/algae/docker/Dockerfile.echo
+++ b/viridian/algae/docker/Dockerfile.echo
@@ -5,5 +5,12 @@ WORKDIR /seaside/echo
 ENV PYTHONUNBUFFERED 1
 ENV PYTHONDONTWRITEBYTECODE 1
 
+RUN apk add --no-cache lsof
+
+ENV BUFFER_SIZE 8192
+ENV ECHO_PORT 5000
+
 COPY docker/echo_server.py ./
 ENTRYPOINT python3 echo_server.py
+
+HEALTHCHECK --interval=3s --timeout=1s --retries=3 --start-period=10s CMD lsof -i -P -n | grep python3 > /dev/null
