dependencies clarified + networks removed

--- a/viridian/algae/docker/compose.local.yml
+++ b/viridian/algae/docker/compose.local.yml
@@ -13,6 +13,8 @@ services:
       sea-int:
         ipv4_address: 87.0.0.65
     depends_on:
+      whirlpool:
+        condition: service_healthy
       echo:
         condition: service_healthy
 
