--- a/viridian/algae/docker/compose.remote.yml
+++ b/viridian/algae/docker/compose.remote.yml
@@ -10,6 +10,9 @@ services:
     networks:
       default:
         ipv4_address: 10.0.0.65
+    depends_on:
+      whirlpool:
+        condition: service_healthy
 
   whirlpool:
     extends:
