--- a/viridian/algae/docker/Dockerfile.algae
+++ b/viridian/algae/docker/Dockerfile.algae
@@ -50,3 +50,13 @@ EXPOSE $CTRL_PORT/tcp
 ENTRYPOINT python3 -m sources.main $OWNER_KEY -t $TUNNEL -m $CONN_MTU -b $CONN_BUFF -a $NODE_ADDR -n $NET_PORT -p $SEA_PORT -c $CTRL_PORT
 
 HEALTHCHECK --interval=3s --timeout=1s --retries=3 --start-period=10s CMD ls /sys/class/net | grep $TUNNEL > /dev/null
+
+
+FROM seaside-algae-default as test
+
+ARG NETWORK_GATEWAY
+ENV ARG_NETWORK_GATEWAY $NETWORK_GATEWAY
+
+RUN apt-get update && apt-get install -y --no-install-recommends iproute2 iputils-ping && rm -rf /var/lib/apt/lists/*
+ENTRYPOINT ip route replace default via $ARG_NETWORK_GATEWAY && \
+    python3 -m sources.main $OWNER_KEY -t $TUNNEL -m $CONN_MTU -b $CONN_BUFF -a $NODE_ADDR -n $NET_PORT -p $SEA_PORT -c $CTRL_PORT || sleep infinity
