better protobuf used, protobuf version updated to 25.1

--- a/caerulean/whirlpool/Makefile
+++ b/caerulean/whirlpool/Makefile
@@ -15,7 +15,7 @@ dependencies:
 .PHONY: dependencies
 
 build: dependencies
-	protoc -I=../../ --go_out=. --experimental_allow_proto3_optional ../../vessels/*.proto
+	protoc -I=../../ --go_out=. ../../vessels/*.proto
 	go build -o build/$(EXECUTABLE_NAME) ./sources
 .PHONY: build
 
