--- a/viridian/algae/docker/Dockerfile.algae
+++ b/viridian/algae/docker/Dockerfile.algae
@@ -5,17 +5,20 @@ WORKDIR /seaside/algae
 ENV PYTHONUNBUFFERED 1
 ENV PYTHONDONTWRITEBYTECODE 1
 ENV DEBIAN_FRONTEND noninteractive
-ENV PROTOC_ZIP protoc-25.1-linux-x86_64.zip
+
+ENV PROTOC_VERSION 25.1
+ENV PROTOC_ZIP protoc-$PROTOC_VERSION-linux-x86_64.zip
 
 RUN apt-get update && apt-get install -y --no-install-recommends python3-pip wget unzip && rm -rf /var/lib/apt/lists/*
-RUN wget -qO $PROTOC_ZIP https://github.com/protocolbuffers/protobuf/releases/download/v25.1/$PROTOC_ZIP && unzip -o $PROTOC_ZIP -d /usr/local bin/protoc && unzip -o $PROTOC_ZIP -d /usr/local 'include/*' && rm -f $PROTOC_ZIP
+RUN wget -qO $PROTOC_ZIP https://github.com/protocolbuffers/protobuf/releases/download/v$PROTOC_VERSION/$PROTOC_ZIP && unzip -o $PROTOC_ZIP -d /usr/local bin/protoc && unzip -o $PROTOC_ZIP -d /usr/local 'include/*' && rm -f $PROTOC_ZIP
 RUN pip install --upgrade --no-cache-dir pip poetry && poetry self add poetry-plugin-export
 
 COPY viridian/algae/pyproject.toml ./
 RUN poetry export -f requirements.txt --with client,devel --without-hashes --output requirements.txt
+RUN pip install --no-cache-dir "betterproto[compiler]==$(sed -nr 's/betterproto==(\S*)/\1/p' requirements.txt)"
 
 COPY vessels ./vessels
-RUN mkdir generated && protoc -I=vessels --python_out=generated --experimental_allow_proto3_optional vessels/*.proto
+RUN mkdir generated && protoc -I=vessels --python_betterproto_out=generated vessels/*.proto
 
 
 FROM ubuntu:22.04 as default
@@ -49,7 +52,7 @@ EXPOSE $SEA_PORT/udp
 EXPOSE $CTRL_PORT/tcp
 ENTRYPOINT python3 -m sources.main $OWNER_KEY -t $TUNNEL -m $CONN_MTU -b $CONN_BUFF -a $NODE_ADDR -n $NET_PORT -p $SEA_PORT -c $CTRL_PORT
 
-HEALTHCHECK --interval=3s --timeout=1s --retries=3 --start-period=10s CMD ls /sys/class/net | grep $TUNNEL
+HEALTHCHECK --interval=3s --timeout=1s --retries=300000 --start-period=10s CMD ls /sys/class/net | grep $TUNNEL
 
 
 FROM seaside-algae-default as test
