--- a/viridian/algae/docker/compose.remote.yml
+++ b/viridian/algae/docker/compose.remote.yml
@@ -5,28 +5,62 @@ services:
     extends:
       file: compose.base.yml
       service: algae
+    build:
+      args:
+        NETWORK_GATEWAY: 10.65.0.100
     environment:
-      NODE_ADDR: 10.0.0.87
+      NODE_ADDR: 10.87.65.87
+      LOCAL_ADDR: 10.65.0.65
+      LOCAL_ECHO: 10.42.0.42
     networks:
-      default:
-        ipv4_address: 10.0.0.65
+      sea-client:
+        ipv4_address: 10.65.0.65
     depends_on:
       whirlpool:
         condition: service_healthy
+      router:
+        condition: service_started
+
+  router:
+    extends:
+      file: compose.base.yml
+      service: router
+    container_name: seaside-internal-router
+    networks:
+      sea-client:
+        ipv4_address: 10.65.0.100
+      sea-router:
+        ipv4_address: 10.87.65.100
 
   whirlpool:
     extends:
       file: compose.base.yml
       service: whirlpool
+    build:
+      args:
+        NETWORK_GATEWAY: 10.87.42.1
     environment:
-      ADDRESS: 10.0.0.87
+      ADDRESS: 10.87.65.87
+      EXTERNAL: 10.87.42.87
     networks:
-      default:
-        ipv4_address: 10.0.0.87
+      sea-router:
+        ipv4_address: 10.87.65.87
+      sea-server:
+        ipv4_address: 10.87.42.87
 
 networks:
-  default:
+  sea-client:
     ipam:
       config:
-        - subnet: 10.0.0.0/24
-          gateway: 10.0.0.1
+        - subnet: 10.65.0.0/24
+          gateway: 10.65.0.1
+  sea-router:
+    ipam:
+      config:
+        - subnet: 10.87.65.0/24
+          gateway: 10.87.65.1
+  sea-server:
+    ipam:
+      config:
+        - subnet: 10.87.42.0/24
+          gateway: 10.87.42.1
