--- a/viridian/algae/docker/Dockerfile.echo
+++ b/viridian/algae/docker/Dockerfile.echo
@@ -16,7 +16,7 @@ ENTRYPOINT python3 echo_server.py
 HEALTHCHECK --interval=3s --timeout=1s --retries=3 --start-period=10s CMD lsof -i -P -n | grep python3 > /dev/null
 
 
-FROM seaside-echo-default as test
+FROM seaside-echo-default as smoke
 
 ARG NETWORK_GATEWAY
 ENV ARG_NETWORK_GATEWAY $NETWORK_GATEWAY
