--- a/viridian/algae/pyproject.toml
+++ b/viridian/algae/pyproject.toml
@@ -33,6 +33,7 @@ pycryptodome = "^3.18.0"
 pytest = "^7.3.1"
 pythonping = "^1.1.4"
 pytest-timeout = "^2.2.0"
+pytest-dependency = "^0.5.1"
 
 [tool.poetry.group.script.dependencies]
 mypy = "^1.3.0"
