--- a/viridian/algae/docker/Dockerfile.algae
+++ b/viridian/algae/docker/Dockerfile.algae
@@ -46,10 +46,12 @@ ENV NODE_ADDR 127.0.0.1
 ENV NET_PORT 8587
 ENV SEA_PORT 8542
 ENV CTRL_PORT 8543
+ENV MIN_HC_TIME 1
+ENV MAX_HC_TIME 5
 
 EXPOSE $SEA_PORT/udp
 EXPOSE $CTRL_PORT/tcp
-ENTRYPOINT python3 -m sources.main $OWNER_KEY -t $TUNNEL -m $CONN_MTU -a $NODE_ADDR -n $NET_PORT -p $SEA_PORT -c $CTRL_PORT
+ENTRYPOINT python3 -m sources.main $OWNER_KEY -t $TUNNEL -m $CONN_MTU -a $NODE_ADDR -n $NET_PORT -p $SEA_PORT -c $CTRL_PORT -i $MIN_HC_TIME -x $MAX_HC_TIME
 
 
 FROM seaside-algae-default as sleeping
@@ -66,6 +68,6 @@ ENV ARG_NETWORK_GATEWAY $NETWORK_GATEWAY
 
 RUN apt-get update && apt-get install -y --no-install-recommends iproute2 iputils-ping && rm -rf /var/lib/apt/lists/*
 ENTRYPOINT ip route replace default via $ARG_NETWORK_GATEWAY && \
-    python3 -m sources.main $OWNER_KEY -t $TUNNEL -m $CONN_MTU -a $NODE_ADDR -n $NET_PORT -p $SEA_PORT -c $CTRL_PORT || sleep infinity
+    python3 -m sources.main $OWNER_KEY -t $TUNNEL -m $CONN_MTU -a $NODE_ADDR -n $NET_PORT -p $SEA_PORT -c $CTRL_PORT -i $MIN_HC_TIME -x $MAX_HC_TIME
 
 HEALTHCHECK --interval=3s --timeout=1s --retries=3 --start-period=10s CMD ls /sys/class/net | grep $TUNNEL
