--- a/viridian/algae/docker/Dockerfile.whirlpool
+++ b/viridian/algae/docker/Dockerfile.whirlpool
@@ -4,4 +4,4 @@ ARG NETWORK_GATEWAY
 ENV ARG_NETWORK_GATEWAY $NETWORK_GATEWAY
 
 ENTRYPOINT ip route replace default via $ARG_NETWORK_GATEWAY && \
-    ./whirlpool.run -a $ADDRESS -e $EXTERNAL -s $SURFACE -p $SEA_PORT -c $CTRL_PORT -n $NET_PORT -t $USER_TTL -u $MAX_USERS -o $OWNER_KEY
+    ./whirlpool.run -a $ADDRESS -e $EXTERNAL -s $SURFACE -p $SEA_PORT -c $CTRL_PORT -n $NET_PORT -u $MAX_USERS -o $OWNER_KEY
